# hypercube

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
src/: lib.rs
src/aggregate/: aggregator.rs  aggregator_full.rs  aggregator_simple.rs  mod.rs  signature_set.rs  verifier.rs
src/core/: encoding.rs  hypercube.rs  layer.rs  mapping.rs  mod.rs
src/crypto/: hash.rs  mod.rs  poseidon2.rs  random.rs
src/schemes/: mod.rs  tl1c.rs  tlfc.rs  tsl.rs
src/wots/: mod.rs
src/wots_poseidon/: keypair.rs  mod.rs
src/xmss/: core.rs  keypair.rs  mod.rs  signature.rs  tree.rs  wots_plus.rs
src/zk/: mod.rs  prover.rs  verifier.rs
src/zk/circuit/: batch_verify.rs  encoding_constraints.rs  hypercube.rs  mod.rs  poseidon2_wots.rs
tests/: test_aggregate_signatures.rs  test_aggregate_simple.rs  test_integration.rs  test_zk_circuits.rs  xmss_tests.rs
tests/unit/: mod.rs  test_encoding.rs  test_hypercube.rs  test_layer.rs  test_mapping.rs  test_tl1c.rs  test_tlfc.rs  test_tsl.rs  test_wots.rs
