[package]
name = "hypercube-signatures"
version = "0.1.0"
edition = "2021"
authors = ["Hypercube Signatures Team"]
description = "Implementation of hash-based signature optimization from 'At the Top of the Hypercube' paper"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ts21/hypercube"
keywords = ["cryptography", "signatures", "hash-based", "post-quantum"]
categories = ["cryptography"]

[dependencies]
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
